Small changes to development and assets
- Added new command for local network access without hmr
- Separated assets catalog into getting-started and icons

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "start:net": "ng serve --host=192.168.0.8 --hmr",
+    "start:net": "ng serve --host=192.168.0.8",
+    "start:net--hmr": "ng serve --host=192.168.0.8 --hmr",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
