--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,8 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets",
+              "src/assets/getting-started",
+              "src/assets/icons",
               "src/manifest.webmanifest"
             ],
             "styles": ["src/styles.scss"],
