--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "start:net": "ng serve --host=192.168.0.8",
-    "start:net--hmr": "ng serve --host=192.168.0.8 --hmr",
+    "start:net": "ng serve --host=192.168.0.4",
+    "start:net--hmr": "ng serve --host=192.168.0.4 --hmr",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "firebase-local": "firebase emulators:start --import=./export-firebase --export-on-exit"
   },
   "private": true,
   "dependencies": {
