--- a/angular.json
+++ b/angular.json
@@ -7,7 +7,8 @@
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
-          "style": "scss"
+          "style": "scss",
+          "changeDetection": "OnPush"
         }
       },
       "root": "",
@@ -25,8 +26,7 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets/getting-started",
-              "src/assets/icons",
+              "src/assets",
               "src/manifest.webmanifest"
             ],
             "styles": ["src/scss/styles.scss"],
@@ -54,7 +54,9 @@
                   "maximumError": "4kb"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "buildOptimizer": true,
+              "optimization": true
             },
             "development": {
               "buildOptimizer": false,
@@ -75,7 +77,8 @@
             },
             "development": {
               "browserTarget": "Memo-licious:build:development",
-              "host": "127.0.0.1"
+              "host": "127.0.0.1",
+              "hmr": true
             }
           },
           "defaultConfiguration": "development"
@@ -107,8 +110,19 @@
             "version": 2,
             "browserTarget": "Memo-licious:build:production"
           }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": ["src/**/*.ts", "src/**/*.html"]
+          }
         }
       }
     }
+  },
+  "cli": {
+    "cache": { "enabled": true },
+    "analytics": false,
+    "schematicCollections": ["@angular-eslint/schematics"]
   }
 }
