--- a/angular.json
+++ b/angular.json
@@ -16,11 +16,11 @@
       "prefix": "app",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser-esbuild",
+          "builder": "@angular-devkit/build-angular:application",
           "options": {
             "outputPath": "dist/memo-licious",
             "index": "src/index.html",
-            "main": "src/main.ts",
+            "browser": "src/main.ts",
             "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
@@ -31,8 +31,7 @@
             ],
             "styles": ["src/scss/styles.scss"],
             "scripts": [],
-            "serviceWorker": true,
-            "ngswConfigPath": "ngsw-config.json"
+            "serviceWorker": "ngsw-config.json"
           },
           "configurations": {
             "production": {
@@ -57,8 +56,7 @@
               "outputHashing": "all",
               "optimization": true,
               "progress": true,
-              "aot": true,
-              "buildOptimizer": true
+              "aot": true
             },
             "development": {
               "optimization": false,
