Modified firebase scripts (hosting does not work)

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build": "ng build -c production && npm run prefix",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "firebase": "firebase emulators:start --config firebase.json --import=./export-firebase --export-on-exit",
-    "firebase:net": "firebase emulators:start --config firebase.dev-localnet.json --import=./export-firebase --export-on-exit",
+    "firebase": "firebase emulators:start --only auth,database --config firebase.json --import=./export-firebase --export-on-exit",
+    "firebase:net": "firebase emulators:start --only auth,database --config firebase.dev-localnet.json --import=./export-firebase --export-on-exit",
     "lint": "ng lint"
   },
   "private": true,
