--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "@angular/platform-browser-dynamic": "^17.2.3",
     "@angular/router": "^17.2.3",
     "@angular/service-worker": "^17.2.3",
+    "masonry-layout": "^4.2.2",
+    "ngx-masonry": "^14.0.1",
+    "random-color-creator": "^1.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
